# CO.DELTA

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  canister_ids.json  dfx.json  release.sh
src/codelta_backend/: Cargo.toml  codelta_backend.did
src/codelta_backend/src/: lib.rs  member.rs  team.rs  topic.rs
src/codelta_frontend/src/: index.html
utils/: README.md  manage_icp.sh  retrieve_proposal_canister_call.sh  retrieve_proposal_canister_upgrade.sh  submit_proposal_canister_call.sh  submit_proposal_canister_upgrade.sh  test_environment_setup.sh  vote_for_disbursal.sh
